--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "lucide-react": "^0.556.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "styled-components": "^6.1.19",
