--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "lucide-react": "^0.556.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-markdown": "^10.1.0",
         "react-router-dom": "^7.10.1",
+        "remark-gfm": "^4.0.1",
         "styled-components": "^6.1.19",
         "zustand": "^5.0.9"
     },
