--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.90.12",
         "@types/react-query": "^1.2.9",
         "axios": "^1.13.2",
         "lucide-react": "^0.556.0",
