--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@tanstack/react-query": "^5.90.12",
         "@types/react-query": "^1.2.9",
         "axios": "^1.13.2",
+        "firebase": "^12.7.0",
         "lucide-react": "^0.556.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
