--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@tanstack/react-query": "^5.90.19",
         "axios": "^1.13.2",
+        "firebase": "^12.8.0",
         "lucide-react": "^0.556.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
